# trustlens-30-10

./: .gitignore  README.md  main.py  pyproject.toml
app/: classifier.py  inference.py  model.py
