[project]
name = "trustlents-oct-30"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.7",
    "mtcnn>=1.0.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
